force-app/zurich-base/main/default/objects/Label_Translations__mdt/Label_Translations__mdt.object-meta.xml
<CustomObject>
    <label>Label Translation</label>
    <pluralLabel>Label Translations</pluralLabel>
</CustomObject>