force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>