force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/French__c.field-meta.xml
<CustomField>
    <fullName>French__c</fullName>
    <label>French</label>
    <length>255</length>
    <type>Text</type>
</CustomField>