force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/German__c.field-meta.xml
<CustomField>
    <fullName>German__c</fullName>
    <label>German</label>
    <length>255</length>
    <type>Text</type>
</CustomField>