force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/Italian__c.field-meta.xml
<CustomField>
    <fullName>Italian__c</fullName>
    <label>Italian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>