force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/Japanese__c.field-meta.xml
<CustomField>
    <fullName>Japanese__c</fullName>
    <label>Japanese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>