force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/PortugueseBrazil__c.field-meta.xml
<CustomField>
    <fullName>PortugueseBrazil__c</fullName>
    <label>Portuguese Brazil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>