force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/Spanish__c.field-meta.xml
<CustomField>
    <fullName>Spanish__c</fullName>
    <label>Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>