force-app/zurich-base/main/default/objects/Label_Translations__mdt/fields/SpanishMexico__c.field-meta.xml
<CustomField>
    <fullName>SpanishMexico__c</fullName>
    <label>Spanish Mexico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>